--- a/web/polymer-elements/faceted-search/faceted-search.html
+++ b/web/polymer-elements/faceted-search/faceted-search.html
@@ -21,6 +21,9 @@
             .badge-danger {
                 background-color: #d43f3a;
             }
+            .panel-default>.panel-heading .badge{
+                right: 20px;
+            }
 
             .badge-warning {
                 background-color: #d58512;
@@ -33,13 +36,12 @@
             .badge {
                 background-color: #808080;
                 position: absolute;
-                right: 20px;
+                right: 0;
             }
 
             .badge-info {
                 background-color: #428BCA;
                 position: absolute;
-                right: 20px;
             }
 
             .badge-inverse {
