--- a/web/home.html
+++ b/web/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link rel="icon" type="image/png" href="dist/img/favicon.png">
-    <script type="text/javascript">var sessionDetails;</script>
     <title>Sefarad 2.0 | Home</title>
     <link href="//fonts.googleapis.com/css?family=Roboto:400,300,100" rel="stylesheet">
     <link href="home.css" rel="stylesheet">
@@ -11,7 +11,6 @@
     <!-- FontAwesome 4.3.0 -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
           type="text/css"/>
-    <link rel="import" href="bower_components/webcomponentsjs/webcomponents.min.js">
     <link rel="import" href="polymer-elements/google-youtube-api/google-youtube.html">
     <link rel="import" href="polymer-elements/paper-fab/paper-fab.html">
     <link rel="import" href="polymer-elements/google-signin/google-signin.html">
@@ -35,11 +34,11 @@
 <div class="toggle-basement js-basement" data-toggle-name="basement" data-direction="left">
     <div class="basement js-toggle-content--basement">
         <nav class="nav -mobile">
-            <a class="nav__item -mobile -logo" href="http://www.gsi.dit.upm.es/"><span class="icon -io">GSI</span></a>
+            <a class="nav__item -mobile -logo" href="http://www.gsi.dit.upm.es/"><span class="icon -io-mobile">GSI</span></a>
 
             <a class="nav__item -mobile -sandbox active" href="">Home</a>
             <a class="nav__item -mobile -sandbox" href="http://www.gsi.dit.upm.es/">GSI Group</a>
-            <a class="nav__item -desktop -sandbox hide-for-small-only" href="query.html">Demo</a>
+            <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
             <a class="nav__item -mobile -io-extended" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
             <a class="nav__item -mobile -logistics" href="https://www.gsi.dit.upm.es/index.php/es/tecnologia/demos.html">Other Projects</a>
         </nav>
@@ -63,11 +62,14 @@
                 <a class="nav__item -desktop -logo" href="home.html"><span class="icon -io">GSI</span></a>
                 <a class="nav__item -desktop -videos hide-for-small-only active" href="">Home</a>
                 <a class="nav__item -desktop -home hide-for-small-only" href="http://www.gsi.dit.upm.es/">GSI Group</a>
-                <a class="nav__item -desktop -sandbox hide-for-small-only" href="query.html">Demo</a>
+                <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
                 <a class="nav__item -desktop -io-extended hide-for-small-only" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
+                <div class="menu js-toggler--basement" style="margin-top:5px; -webkit-user-select: none; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+                    <span class="icon -menu-black">Navigation</span>
+                </div>
             </nav>
 
-            <div style="position: absolute; right: 0; margin: 29px 42px 0">
+            <div style="position: absolute; right: 0; margin: 19px 32px 0">
                 <google-signin clientId="675126827387-jrvg34sf52dni2o8o5kjgthc3abm8s0u.apps.googleusercontent.com"
                                scopes="https://www.googleapis.com/auth/drive.appfolder"></google-signin>
             </div>
@@ -92,27 +94,15 @@
             <div class="recap-video__wrapper">
                 <div class="recap-video__content">
 
-                    <google-youtube id="googleYouTube"
-                                    style="display:none"
+                    <google-youtube thumbnail="dist/img/demo-screenshot-rotated.png"
+                                    id="googleYouTube"
                                     videoid="2RAsNDxmk-E"
                                     width="100%"
                                     height="675px"
                                     rel="0"
-                                    autoplay="0"
+                                    autoplay="1"
                                     chromeless>
                     </google-youtube>
-
-                    <div class="bucket__photo -fade js-responsive-image js-responsive-image-mobile loaded" data-src="/events/io/images/photos/recap-poster.jpg" data-hasretina="true" data-lazyload="true" data-breakpoints="360,480,568,768,1024,1200,1400,1600" style="background-image: url(dist/img/demo-screenshot-rotated.png);"></div>
-
-                    <div class="recap-video__pre-load v-align -whole">
-                        <div class="v-align__element -middle text-center">
-                            <h1 class="h1 -thin g-color-white" style="color: #0c5d8c">
-                                <span class="icon -play-large-white -text-bottom"></span>
-                                Watch the Video
-                            </h1>
-                        </div>
-                    </div>
-                    <a href="" id="video-player" class="-actionable -block js-video" style="opacity: 0;"></a>
                 </div>
             </div>
         </div>
@@ -148,7 +138,7 @@
 
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
                                 Marl is a standardised data schema designed to annotate and describe subjective opinions expressed on the web or in particular Information Systems.
-                                <br><a class="nav__item -desktop -schedule hide-for-small-only"
+                                <br><a class="nav__item -demos hide-for-small-only"
                                        href="#" style="text-decoration: line-through;">Soon Available</a>
                             </div>
                         </div>
@@ -170,7 +160,7 @@
 
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
                                 SmartOpenData will create a Linked Open Data infrastructure fed by public and freely available data resources, existing sources for biodiversity and environment protection and research in European National Parks.
-                                <br><a class="nav__item -desktop -schedule hide-for-small-only"
+                                <br><a class="nav__item -demos hide-for-small-only"
                                        href="http://lab.gsi.dit.upm.es/Sefarad2.0/build/web/dashboart.html">Demo</a>
                             </div>
                         </div>
@@ -192,7 +182,7 @@
 
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
                                 TourPedia is the Wikipedia of Tourism. It contains information about accommodations, restaurants, points of interest and attractions of different places in Europe.
-                                <br><a class="nav__item -desktop -schedule hide-for-small-only"
+                                <br><a class="nav__item -demos hide-for-small-only"
                                        href="http://lab.gsi.dit.upm.es/Sefarad2.0/build/web/dashboartPlaces.html">Demo</a>
                             </div>
                         </div>
@@ -214,7 +204,7 @@
 
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
                                 DBpedia is a crowd-sourced community effort to extract structured information from Wikipedia and make this information available on the Web.
-                                <br><a class="nav__item -desktop -schedule hide-for-small-only"
+                                <br><a class="nav__item -demos hide-for-small-only"
                                        href="http://lab.gsi.dit.upm.es/Sefarad2.0/build/web/dashboartRestaurants.html">Demo</a>
                             </div>
                         </div>
@@ -258,35 +248,7 @@
         </div>
 
         <footer class="section footer g-bg-light-grey -border-top">
-            <div class="row">
-                <div class="col -width-whole">
-
-                    <div class="footer__links -top-buffer">
-                        <div class="footer__link">
-                            <a href="https://www.google.com/events/io/help">Help</a>
-                        </div>
-
-                        <div class="footer__link">
-                            <a href="//www.google.com/policies/" target="_blank">Privacy &amp; Terms</a>
-                        </div>
-
-                        <div class="footer__link">
-                            <a href="//googledevelopers.blogspot.com/" target="_blank">Google Developers Blog</a>
-                        </div>
-
-                        <div class="footer__link">
-                            <a href="//developers.google.com/" target="_blank">Google Developers</a>
-                        </div>
-
-                        <div class="footer__link">
-                            <a href="//plus.google.com/+GoogleDevelopers/posts" target="_blank">+Google Developers</a>
-                        </div>
-
-                        <div class="footer__link">
-                            <a href="//developers.google.com/events/io" target="_blank">Google I/O 2013</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="copyright"> <small> © 2015 Grupo de Sistemas Inteligentes, DIT-UPM </small>
             </div>
         </footer>
     </div>
