--- a/web/dataset.html
+++ b/web/dataset.html
@@ -308,5 +308,15 @@
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js" type="text/javascript"></script>
 
+<script type="text/javascript">
+    var logged = document.querySelector('google-signin');
+
+    var loggead = function() {
+        this.isLoggead = function(){
+            return logged.isSigned;
+        }
+    };
+</script>
+
 </body>
 </html>
