--- a/web/queryeditor.html
+++ b/web/queryeditor.html
@@ -183,7 +183,7 @@
                             <button class="fa fa-question-circle">
                             </button>
 
-                            <paper-action-dialog class="size-position" backdrop autoCloseDisabled layered="false">
+                            <paper-action-dialog class="size-position" style="height: 320px" backdrop autoCloseDisabled layered="false">
                                 <h3>Sparql Editor</h3>
                                 <br>
                                 <ol style="font-size: 0.92em">
