--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -263,8 +263,8 @@
                             <a class="btn btn-app center-block" id="queryButton">
                                 <i class="fa fa-play"></i> Execute Query
                             </a>
-                            <a class="btn btn-app center-block" id="buttonSave2" ng-click="saveResults()" style="display: none;">
-                                <i class="fa fa-save"></i> Save Results
+                            <a class="btn btn-app center-block" id="buttonShow" ng-click="showInDashboard()" style="display: none;">
+                                <i class="fa fa-refresh"></i> Show in Dashboard
                             </a>
 
                             <div class="alert alert-danger alert-dismissable hide" id="queryError">
@@ -578,6 +578,13 @@
         }
     };
 
+    var jsYasqe = function() {
+
+        this.getQuery = function(){
+            return yasqe.getValue();
+        }
+    };
+
     tabs.addEventListener('core-select',function(){
         pages.selected = tabs.selected;
     });
@@ -691,7 +698,7 @@
                     console.log(data);
                     $("#querySuccess").removeClass('hide');
 
-                    document.getElementById("buttonSave2").style.display = "block";
+                    document.getElementById("buttonShow").style.display = "block";
                     //ko.mapping.fromJSON(data, vm.viewData);
                     //updateWidgets(true);
                     $("#hiddenResults").val(data);
