--- a/web/query.html
+++ b/web/query.html
@@ -183,16 +183,17 @@
                             <button class="fa fa-question-circle">
                             </button>
 
-                            <paper-action-dialog class="size-position" backdrop autoCloseDisabled layered="false">
-                                <h3>Sparql Editor</h3>
+                            <paper-action-dialog class="size-position" style="height: 280px" backdrop autoCloseDisabled layered="false">
+                                <h3>Query List</h3>
                                 <br>
-                                <ol style="font-size: 0.92em">
-                                    <li> Choose a query template in the list </li><br>
-                                    <li> If you have created a parameters list, select values on it </li><br>
-                                    <li> Press "Execute Query" button</li><br>
-                                    <li> If an error occurs, check the query syntax</li><br>
-                                    <li> Below appears the results of data retrieved</li><br>
-                                </ol>
+                                <br>
+                                <ul>
+                                    <li> View properties of query </li><br>
+                                    <li> Edit properties of query </li><br>
+                                    <li> Delete selected query *</li><br>
+                                </ul>
+
+                                <h5>*When you delete a query, dashboard attached to it doesn't be deleted </h5>
                                 <paper-button affirmative autofocus>Tap me to close</paper-button>
                             </paper-action-dialog>
 
@@ -312,6 +313,19 @@
         this.isLoggead = function(){
             return logged.isSigned;
         }
+    };
+
+    var scope = document.querySelector('template[is=auto-binding]');
+
+    scope.toggleDialog1 = function(e) {
+        if (e.target.localName != 'button') {
+            return;
+        }
+        var d = e.target.nextElementSibling;
+        if (!d) {
+            return;
+        }
+        d.toggle();
     };
 </script>
 
