--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="dist/img/favicon.png">
     <title>Sefarad 2.0 | Home</title>
     <link href="//fonts.googleapis.com/css?family=Roboto:400,300,100" rel="stylesheet">
-    <link href="home.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <script src="https://www.google.com/events/io/js/vendor/modernizr/modernizr.js"></script>
     <!-- FontAwesome 4.3.0 -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
@@ -59,7 +59,7 @@
     <div class="wrapper js-basement-sibling">
         <header class="header hide-for-x-large -lighter post-keynote-header js-nav">
             <nav class="nav -desktop" style="float: left">
-                <a class="nav__item -desktop -logo" href="home.html"><span class="icon -io">GSI</span></a>
+                <a class="nav__item -desktop -logo" href="index.html"><span class="icon -io">GSI</span></a>
                 <a class="nav__item -desktop -videos hide-for-small-only active" href="">Home</a>
                 <a class="nav__item -desktop -home hide-for-small-only" href="http://www.gsi.dit.upm.es/">GSI Group</a>
                 <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
