--- a/web/newdataset.html
+++ b/web/newdataset.html
@@ -143,8 +143,8 @@
                     </a>
                     <ul class="treeview-menu">
                         <li class=""><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
-
                         <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
+                        <li class=""><a href="dashboardTweet.html"><i class="fa fa-circle-o"></i> Tweets Sentiment</a></li>
                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li>
                     </ul>
                 </li>
