--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -176,7 +176,8 @@
                         <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
 
                         <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
-                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
+                        <li class=""><a href="dashboardTweet.html"><i class="fa fa-circle-o"></i> Tweets Sentiment</a></li>
+                        <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
 
                 <li class="treeview">
                     <a href="#">
