--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -123,6 +123,7 @@
                                 <number-chart param="name" type="param" class="dc-element" style="float: left;"></number-chart>
                                  &nbsp Elements have been filtered</li>
                             <li class="footer"><button class="btn" style="width: 100%;" onclick="clearFilter()" >Clear Filters</button></li>
+                            <li class="footer"><button class="btn" style="width: 100%;" ng-click="showDefault()" >Load Default Data</button></li>
                         </ul>
                     </li>
                     <!-- User Account: style can be found in dropdown.less -->
@@ -177,7 +178,6 @@
                     <ul class="treeview-menu">
                         <li class=""><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
                         <li class="active"><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
-                        <li class=""><a href="dashboardTweet.html"><i class="fa fa-circle-o"></i> Tweets Sentiment</a></li>
                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
 
                 <li class="treeview">
