--- a/web/dashboardTweet.html
+++ b/web/dashboardTweet.html
@@ -127,6 +127,7 @@
                                 <number-chart param="name" type="param" class="dc-element" style="float: left;"></number-chart>
                                 &nbsp Elements have been filtered</li>
                             <li class="footer"><button class="btn" style="width: 100%;" onclick="clearFilter()" >Clear Filters</button></li>
+                            <li class="footer"><button class="btn" style="width: 100%;" ng-click="showDefault()" >Load Default Data</button></li>
                         </ul>
                     </li>
                     <!-- User Account: style can be found in dropdown.less -->
