--- a/web/index.html
+++ b/web/index.html
@@ -38,9 +38,8 @@
 
             <a class="nav__item -mobile -sandbox active" href="">Home</a>
             <a class="nav__item -mobile -sandbox" href="http://www.gsi.dit.upm.es/">GSI Group</a>
-            <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
+            <a class="nav__item -mobile -sandbox" href="newdataset.html">Demo</a>
             <a class="nav__item -mobile -io-extended" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
-            <a class="nav__item -mobile -logistics" href="https://www.gsi.dit.upm.es/index.php/es/tecnologia/demos.html">Other Projects</a>
         </nav>
     </div>
 
@@ -57,17 +56,19 @@
     <![endif]-->
 
     <div class="wrapper js-basement-sibling">
-        <header class="header hide-for-x-large -lighter post-keynote-header js-nav">
-            <nav class="nav -desktop" style="float: left">
-                <a class="nav__item -desktop -logo" href="index.html"><span class="icon -io">GSI</span></a>
-                <a class="nav__item -desktop -videos hide-for-small-only active" href="">Home</a>
-                <a class="nav__item -desktop -home hide-for-small-only" href="http://www.gsi.dit.upm.es/">GSI Group</a>
-                <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
-                <a class="nav__item -desktop -io-extended hide-for-small-only" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
-                <div class="menu js-toggler--basement" style="margin-top:5px; -webkit-user-select: none; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                    <span class="icon -menu-black">Navigation</span>
-                </div>
-            </nav>
+        <header class="header -lighter post-keynote-header js-nav">
+            <div class="hide-for-x-large -lighter post-keynote-header js-nav">
+                <nav class="nav -desktop" style="float: left">
+                    <a class="nav__item -desktop -logo" href="index.html"><span class="icon -io">GSI</span></a>
+                    <a class="nav__item -desktop -videos hide-for-small-only active" href="">Home</a>
+                    <a class="nav__item -desktop -home hide-for-small-only" href="http://www.gsi.dit.upm.es/">GSI Group</a>
+                    <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
+                    <a class="nav__item -desktop -io-extended hide-for-small-only" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
+                    <div class="menu js-toggler--basement" style="margin-top:5px; -webkit-user-select: none; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+                        <span class="icon -menu-black">Navigation</span>
+                    </div>
+                </nav>
+            </div>
 
             <div style="position: absolute; right: 0; margin: 19px 32px 0">
                 <google-signin clientId="675126827387-jrvg34sf52dni2o8o5kjgthc3abm8s0u.apps.googleusercontent.com"
@@ -86,7 +87,7 @@
 
         </div>
 
-        <div style="width: 100%; height: 675px"><div class="recap-video -width-whole g-bg-black">
+        <div style="width: 100%; height: 675px"><div class="recap-video -width-whole">
             <a href="#" class="video-player__close js-close-player" style="visibility: hidden; opacity: 0;">
                 <span class="icon -close-white -middle"></span>
             </a>
